[gd_scene load_steps=2 format=3 uid="uid://cr5xr3kdfsimk"]

[ext_resource type="Script" path="res://gui/task_tracking/editor_add_user.gd" id="1_8vktb"]

[node name="EditorAddUser" type="PanelContainer"]
script = ExtResource("1_8vktb")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="AddButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Add User"

[node name="LineEdit" type="LineEdit" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "User Name"
alignment = 1
expand_to_text_length = true
clear_button_enabled = true

[node name="ColorPickerButton" type="ColorPickerButton" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Color"
color = Color(0.831624, 0.115964, 0.528268, 1)

[node name="RandomColorButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Random Color"

[node name="CancelButton" type="Button" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Cancel"

[connection signal="pressed" from="HBoxContainer/AddButton" to="." method="_on_add_button_pressed"]
[connection signal="pressed" from="HBoxContainer/RandomColorButton" to="." method="_on_random_color_button_pressed"]
[connection signal="pressed" from="HBoxContainer/CancelButton" to="." method="_on_cancel_button_pressed"]
